[package]
name = "rust-statistics-calculator"
version = "0.1.0"
edition = "2021"
authors = ["kevinMEH kevin@liao.gg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
quickersort = "3.0.1"